Done Login Navigation

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -49,8 +49,6 @@
                     <input type="password" placeholder="Confirm Password" id="signup-confirm-password" required>
                 </div>
 
-                <button id="signup-submit" type="submit">Create Account</button>
-
                 <div class="social-media">
                     <button type="button" class="social-btn google" id="signup-google">
                         <i class="fab fa-google"></i>
@@ -61,6 +59,10 @@
                         <i class="fab fa-facebook-f"></i>
                         <span>Sign up with Facebook</span>
                     </button>
+                </div>
+                
+                <div class="button-container">
+                    <button id="signup-submit" type="submit">Create Account</button>
                 </div>
 
                 <p class="form-text">
@@ -87,8 +89,6 @@
                     <input type="password" placeholder="Password" id="login-password" required>
                 </div>
 
-                <button id="login-submit" type="submit">Login</button>
-
                 <div class="social-media">
                     <button type="button" class="social-btn google" id="login-google">
                         <i class="fab fa-google"></i>
@@ -99,6 +99,10 @@
                         <i class="fab fa-facebook-f"></i>
                         <span>Sign in with Facebook</span>
                     </button>
+                </div>
+
+                <div class="button-container">
+                    <button id="login-submit" type="submit">Login</button>
                 </div>
 
                 <p class="form-text">
@@ -139,7 +143,9 @@
                     <input type="password" placeholder="Confirm New Password" id="forgot-confirm-password" required>
                 </div>
 
-                <button id="forgot-submit" type="submit">Send OTP</button>
+                <div class="button-container">
+                    <button id="forgot-submit" type="submit">Send OTP</button>
+                </div>
 
                 <p class="form-text">
                     Remember your password? <a href="#" data-modal="login">Login Here</a>
