--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -29,7 +29,7 @@
     <div class="particles" id="particles"></div>
 
     <!-- Create Account-->
-    <div class="modal active" id="signup-modal">
+    <div class="modal" id="signup-modal">
         <div class="create-account-container">
             <form id="signup-form">
                 <h3>Create Account</h3>
@@ -54,11 +54,6 @@
                         <i class="fab fa-google"></i>
                         <span>Sign up with Google</span>
                     </button>
-
-                    <button type="button" class="social-btn fb" id="signup-fb">
-                        <i class="fab fa-facebook-f"></i>
-                        <span>Sign up with Facebook</span>
-                    </button>
                 </div>
                 
                 <div class="button-container">
@@ -74,7 +69,7 @@
     </div>
 
     <!-- Login -->
-    <div class="modal" id="login-modal">
+    <div class="modal active" id="login-modal">
         <div class="create-account-container">
             <form id="login-form">
                 <h3>Login</h3>
@@ -93,11 +88,6 @@
                     <button type="button" class="social-btn google" id="login-google">
                         <i class="fab fa-google"></i>
                         <span>Sign in with Google</span>
-                    </button>
-
-                    <button type="button" class="social-btn fb" id="login-fb">
-                        <i class="fab fa-facebook-f"></i>
-                        <span>Sign in with Facebook</span>
                     </button>
                 </div>
 
@@ -127,24 +117,30 @@
                     <input type="email" placeholder="Email" id="forgot-email" required>
                 </div>
 
-                <div class="form-group" id="forgot-otp-group" style="display: none;">
+                <div class="form-group hidden" id="forgot-otp-group">
                     <label for="forgot-otp">Enter OTP</label>
-                    <input type="text" placeholder="Enter OTP" id="forgot-otp" maxlength="6" required>
+                    <input type="text" placeholder="Enter OTP" id="forgot-otp" maxlength="6">
                     <small style="color: #666; font-size: 12px; margin-top: 5px; display: block;">Check your email for the OTP code</small>
                 </div>
 
-                <div class="form-group" id="forgot-new-password-group" style="display: none;">
+                <div class="form-group hidden" id="forgot-new-password-group">
                     <label for="forgot-new-password">New Password</label>
-                    <input type="password" placeholder="New Password" id="forgot-new-password" required>
+                    <input type="password" placeholder="New Password" id="forgot-new-password">
                 </div>
 
-                <div class="form-group" id="forgot-confirm-password-group" style="display: none;">
+                <div class="form-group hidden" id="forgot-confirm-password-group">
                     <label for="forgot-confirm-password">Confirm New Password</label>
-                    <input type="password" placeholder="Confirm New Password" id="forgot-confirm-password" required>
+                    <input type="password" placeholder="Confirm New Password" id="forgot-confirm-password">
                 </div>
 
                 <div class="button-container">
                     <button id="forgot-submit" type="submit">Send OTP</button>
+                </div>
+
+                <div class="button-container">
+                    <button type="button" id="resend-otp" disabled style="margin-top:10px;">
+                        Resend OTP (60s)
+                    </button>
                 </div>
 
                 <p class="form-text">
