--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -10,7 +10,7 @@
     <script type="module" src="../static/js/app.js"></script>
 </head>
 
-<body>
+<body>z
     <div class="header">
         <div class="image-container">
             <img src="../static/images/ielts_logo2.png" alt="IELTS Logo" class="logo">
