--- a/templates/automated_marking.html
+++ b/templates/automated_marking.html
@@ -27,6 +27,21 @@
 
     <div class="middle">
         <h2>Automated Marking</h2>
+        <div class="block-container">
+            <div class="question-set-container">
+                <label>Select Question Set:</label>
+                    <select class="question-set-select">
+                        <option value="">Select Question Set</option>
+                    </select>
+            </div>
+        </div>
+        <div class="upload-file-container">
+            <h2>Upload single or multiple files (PDF, JPG, PNG)</h2>
+        </div>
+    </div>
+
+    <div class="submit-container">
+        <button id="mark-btn" disabled>Mark</button>
     </div>
 
     <div class="footer">
