--- a/templates/result.html
+++ b/templates/result.html
@@ -98,7 +98,7 @@
 
                 <div class="footer-btns">
                     <button id="save-btn" class="btn-save" onclick="saveAllChanges()">
-                        <span id="save-btn-text">Save</span>
+                        <span id="save-btn-text">Save locally</span>
                         <div id="save-btn-spinner" class="spinner" style="display: none;"></div>
                     </button>
                     <button class="btn-cancel" onclick="window.location.href='/question-generator'">Cancel</button>
