--- a/templates/history.html
+++ b/templates/history.html
@@ -33,7 +33,8 @@
             </div>
             
             <div id="history-list" class="history-grid">
-                <div class="loader"></div> </div>
+                <div class="loader"></div>
+            </div>
         </div>
 
         <template id="history-card-template">
@@ -57,6 +58,14 @@
         </template>
     </middle>
 
+    <!-- Preview Modal -->
+    <div id="preview-modal" class="modal" style="display:none; position:fixed; top:0; left:0; right:0; bottom:0; background:rgba(0,0,0,0.6); align-items:center; justify-content:center; z-index:10000;">
+        <div style="width:80%; height:80%; background:white; border-radius:8px; overflow:hidden; position:relative;">
+            <button id="preview-close" style="position:absolute; right:8px; top:8px; z-index:10;">Close</button>
+            <iframe id="preview-iframe" src="" style="width:100%; height:100%; border:0;"></iframe>
+        </div>
+    </div>
+
     <div class="footer">
         <div class="left-panel">
             <ul>
@@ -75,6 +84,7 @@
 
     </div>
 
+    <script src="../static/js/history.js"></script>
 </body>
 
 </html>
