--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -88,47 +88,82 @@ body {
     background-color: #E71010;
     display: flex;
     justify-content: center;
-    column-gap: 15rem;
+    column-gap: 5rem;
     flex-wrap: wrap;
-    padding: 1.5rem 2rem;
+    padding: 2rem;
     border-top: 1px solid #ccc;
 }
 
-.footer .left-panel {
+.footer-section {
     max-width: 300px;
-    margin-top: 1rem;
-}
-
-.footer .left-panel ul {
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-}
-
-.footer .left-panel ul li {
-    color: #ffffff;
-    font-weight: 500;
-    cursor: pointer;
-    transition: color 0.3s;
-}
-
-.footer .left-panel ul li:hover {
-    color: #343434;
-    text-decoration: underline;
-}
-
-.footer .right-panel {
-    max-width: 300px;
-}
-
-.footer .right-panel h4 {
-    margin-bottom: 0.5rem;
+    margin: 1rem;
     color: #ffffff;
 }
 
-.footer .right-panel p {
+.footer-section h4 {
+    margin-bottom: 1rem;
+    font-size: 1.2rem;
     color: #ffffff;
+    text-align: center;
+}
+
+.footer-section p,
+.footer-section ul {
     font-size: 0.9rem;
-    margin-bottom: 0.3rem;
+    line-height: 1.6;
+}
+
+.footer-section ul {
+    padding-left: 0;
+    list-style: none;
+}
+
+.footer-section ul li {
+    margin-bottom: 0.5rem;
+}
+
+.footer-section textarea {
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+    resize: vertical;
+    border: 1px solid #ccc;
+    font-size: 0.9rem;
+    margin-bottom: 0.5rem;
+}
+
+.footer-section button {
+    display: block;
+    width: 100%;
+    padding: 10px 0;
+    background-color: #ffffff;
+    color: #E71010;
+    border: none;
+    border-radius: 5px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.3s;
+}
+
+.footer-section button:hover {
+    background-color: #f2f2f2;
+}
+
+#feedback-msg {
+    text-align: center;
+    margin-top: 0.5rem;
+}
+
+@media screen and (max-width: 900px) {
+    .footer {
+        flex-direction: column;
+        align-items: center;
+        row-gap: 2rem;
+        column-gap: 0;
+    }
+
+    .footer-section {
+        max-width: 90%;
+        text-align: center;
+    }
 }
